@@ -1,6 +1,8 @@
 package com.webteam.laptopmall.servlet.prod;
 
 import com.webteam.laptopmall.dto.prod.ProductDTO;
+import com.webteam.laptopmall.exception.ProductNotFoundException;
+import com.webteam.laptopmall.repository.prod.ProdReposImpl;
 import com.webteam.laptopmall.service.prod.ProdService;
 import com.webteam.laptopmall.service.prod.ProdServiceImpl;
 
@@ -11,10 +13,13 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 @WebServlet("/get-prod-by-id")
 public class GetProdByIdServlet extends HttpServlet {
 
+    private static final Logger log = Logger.getLogger(GetProdByIdServlet.class.getName());
     private ProdService prodService;
 
     @Override
@@ -28,10 +33,18 @@ public class GetProdByIdServlet extends HttpServlet {
             throws ServletException, IOException {
 
         String idStr = req.getParameter("id");
-        Long id = new Long(idStr);
+        Long id = Long.valueOf(idStr);
 
-        ProductDTO prodDTO = prodService.getById(id);
-        PrintWriter pw = resp.getWriter();
-        pw.println(prodDTO);
+        String url;
+        try {
+            ProductDTO prodDTO = prodService.getById(id);
+            req.setAttribute("prod", prodDTO);
+            url = "/WEB-INF/views/product-details.jsp";
+        } catch (ProductNotFoundException e) {
+            log.log(Level.SEVERE, e.getMessage());
+            url = "/WEB-INF/views/access-denied.html";
+        }
+
+        getServletContext().getRequestDispatcher(url).forward(req, resp);
     }
 }
